# Arivion

./: .gitignore  README.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: HolographicFactionCard.tsx  InteractiveBackground.tsx  InteractiveOrb.tsx  InteractiveSplitStage.tsx
netrunner quant lab/: .dockerignore  .env.example  artifacts_quant_stress_report.json  package.json  pnpm-lock.yaml
netrunner quant lab/apps/agent/: Dockerfile  package-lock.json  package.json
netrunner quant lab/apps/api/: Dockerfile  package.json  tsconfig.json
netrunner quant lab/apps/data-ingestor/: Dockerfile  main.py  pyproject.toml
netrunner quant lab/apps/mcp/: Dockerfile  package.json
netrunner quant lab/apps/sandbox-runner/: Dockerfile  main.py  pyproject.toml
netrunner quant lab/apps/verifier/: Dockerfile  main.py  pyproject.toml  (+1 more)
netrunner quant lab/apps/worker/: Dockerfile  concurrency.py  l2_data.py  live_paper.py  live_portfolio.py  lp_service.py  main.py  multiasset_plan.py  pyproject.toml  security.py
netrunner quant lab/apps/worker/validator/: semantic_validator.py
netrunner quant lab/contracts/: foundry.toml
netrunner quant lab/infra/: docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml
netrunner quant lab/scripts/: _ma_print.py  _provision_ma.sh  bench_long_range.py  load_regimes.py  migration_dryrun.sh  preview_static.mjs  push_stock_prices.py  quant_stress_matrix.mjs  realtime_trade.sh  run_auth_itest.sh  verify_living_trader.sh  verify_multiasset.sh
(+325 files in other folders)
