[project]
name = "worker"
version = "0.1.0"
description = "Duality quant worker and semantic validator"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "asyncpg==0.30.0",
  "redis==5.2.1",
  "jsonschema==4.23.0",
  "pydantic==2.10.4",
  "prometheus-client==0.21.1"
]

[tool.uvicorn]
host = "0.0.0.0"
port = 7000
